# Generated by Django 5.1.15 on 2026-04-01 01:45

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name="Course",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("title", models.CharField(max_length=255)),
                ("slug", models.SlugField(max_length=255, unique=True)),
                (
                    "category",
                    models.CharField(
                        choices=[
                            ("design", "Design"),
                            ("dev", "Development"),
                            ("ai", "AI"),
                            ("business", "Business"),
                        ],
                        max_length=20,
                    ),
                ),
                (
                    "difficulty",
                    models.CharField(
                        choices=[
                            ("beginner", "Beginner"),
                            ("intermediate", "Intermediate"),
                            ("advanced", "Advanced"),
                        ],
                        default="beginner",
                        max_length=20,
                    ),
                ),
                ("description", models.TextField(blank=True, default="")),
                ("overview", models.TextField(blank=True, default="")),
                ("thumbnail", models.URLField(blank=True, default="")),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("draft", "Draft"),
                            ("published", "Published"),
                            ("hidden", "Hidden"),
                        ],
                        default="draft",
                        max_length=20,
                    ),
                ),
                (
                    "duration_hours",
                    models.DecimalField(decimal_places=1, default=0, max_digits=5),
                ),
                ("tags", models.JSONField(blank=True, default=list)),
                ("language", models.CharField(default="ja", max_length=10)),
                (
                    "instructor",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="taught_courses",
                        to=settings.AUTH_USER_MODEL,
                    ),
                ),
            ],
            options={
                "ordering": ["-created_at"],
            },
        ),
        migrations.CreateModel(
            name="Chapter",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("title", models.CharField(max_length=255)),
                ("order", models.PositiveIntegerField(default=0)),
                (
                    "duration_label",
                    models.CharField(blank=True, default="", max_length=50),
                ),
                (
                    "course",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="chapters",
                        to="courses.course",
                    ),
                ),
            ],
            options={
                "ordering": ["order"],
                "unique_together": {("course", "order")},
            },
        ),
        migrations.CreateModel(
            name="Lesson",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True,
                        primary_key=True,
                        serialize=False,
                        verbose_name="ID",
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("title", models.CharField(max_length=255)),
                ("description", models.TextField(blank=True, default="")),
                ("video_url", models.URLField(blank=True, default="")),
                ("duration_seconds", models.PositiveIntegerField(default=0)),
                (
                    "duration_label",
                    models.CharField(blank=True, default="", max_length=50),
                ),
                ("order", models.PositiveIntegerField(default=0)),
                (
                    "lesson_type",
                    models.CharField(
                        choices=[
                            ("video", "Video"),
                            ("article", "Article"),
                            ("quiz", "Quiz"),
                            ("exercise", "Exercise"),
                        ],
                        default="video",
                        max_length=20,
                    ),
                ),
                (
                    "chapter",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="lessons",
                        to="courses.chapter",
                    ),
                ),
            ],
            options={
                "ordering": ["order"],
                "unique_together": {("chapter", "order")},
            },
        ),
    ]
